--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sit725-2022-t1-prac2",
+  "name": "sit725-2022-t2-prac4",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^5.8.10"
   }
 }
